<resources>
    <string name="app_name">Foxgram</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="social">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_here_signup">New here?? Signup</string>
    <string name="remember_me">Remember Me</string>
    <string name="signup">Signup</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="register">Register</string>
    <string name="already_have_acc_login">Already have Acc???Login</string>
    <string name="home_page">Home Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="add_a_caption">Add a Caption</string>
    <string name="post">Post</string>
    <string name="signout">Signout</string>
    <string name="direct">Direct</string>
    <string name="textview">TextView</string>
    <string name="notext">Add a Post</string>
    <string name="username">Username</string>
    <string name="add">Add</string>
    <string name="uid">uid</string>
    <string name="id_invalid">Id : Invalid</string>
    <string name="name_invalid">Name : Invalid</string>
    <string name="no_posts_upload">No Posts!! Upload</string>
    <string name="item">Item</string>
    <string name="upload_new">Upload New</string>
    <string name="todo">TODO</string>
    <string name="delete">Delete</string>
    <string name="uid_cheese_user">Uid : Fox User</string>
    <string name="posts">Posts</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="settings">Settings</string>
    <string name="_0_likes">0 likes</string>
    <string name="likes">likes</string>
    <string name="loading_likes">Loading likes</string>
    <string name="no_internet_connection">No Internet Connection </string>
    <string name="check_your_internet_connection_and_try_again">Check Your Internet Connection and Try Again.</string>
    <string name="will_be_updated">Will be Updated</string>
</resources>