<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:textColor="#FFFFFF"

        app:title="@string/messages_header">

        <EditTextPreference

            app:key="signature"
            android:textColor="#FFFFFF"

            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference

            app:defaultValue="reply"
            android:textColor="#FFFFFF"

            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"



            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:textColor="#FFFFFF"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            android:textColor="#FFFFFF"

            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            android:textColor="#FFFFFF"


            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>