<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/search_Fragment"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"/>


    <item
        android:id="@+id/add_Post"
        android:title="@string/add"
        android:icon="@drawable/ic_baseline_add_circle_24"/>
    <item
        android:id="@+id/notification_frag"
        android:title="@string/notification"
        android:icon="@drawable/ic_baseline_notifications_24"/>
    <item
        android:id="@+id/profile_Fragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_account_circle_24"/>
</menu>