<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile_Fragment">



    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:descendantFocusability="blocksDescendants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:background="@color/colorAccent"
                android:textAlignment="center"
                android:theme="@style/Theme.AppCompat.DayNight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="Foxgram"
                app:titleTextColor="@color/colorAccentWhite"
                tools:ignore="MissingConstraints" />


            <agency.tango.android.avatarview.views.AvatarView
                android:id="@+id/avatarView2"
                android:layout_width="130dp"
                android:layout_height="130dp"

                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/user"
                app:av_border_color="@android:color/white"
                app:av_border_width="2dp"
                app:av_text_size_percentage="35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

            <TextView
                android:id="@+id/usernameprofile2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="64dp"
                android:text="@string/name_invalid"
                android:textColor="@color/colorAccentWhite"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/avatarView2"
                app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

            <TextView
                android:id="@+id/idprofile2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="28dp"

                android:text="@string/uid_cheese_user"
                android:textColor="@color/colorAccentWhite"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/avatarView2"
                app:layout_constraintTop_toBottomOf="@+id/usernameprofile2" />

            <TextView
                android:id="@+id/posts"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_marginTop="28dp"
                android:text="@string/posts"
                android:textColor="@color/colorAccentWhite"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.042"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarView2" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/posts"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profileview2"
                android:layout_width="411dp"
                android:layout_height="399dp"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/noprof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_posts_upload"
                android:textColor="@color/colorAccentWhite"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/profileview2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profileview2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
